# PythonFastApiProjectByMe

./: .gitignore  README.md  alembic.ini  pyproject.toml  todos.db
alembic/: env.py
alembic/versions/: 0fda11ad4204_create_address_id_to_users.py  99059615b11b_create_address_table.py  f116584e3577_create_phone_number_for_user_col.py
app/: database.py  main.py  models.py
app/routers/: admin.py  auth.py  todos.py  users.py
