[tool.poetry]
name = "PythonFastApiProjectByMe"
version = "0.1.0"
description = ""
authors = ["Pedro Castro <pedro.tiago.castro.ist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"