[tool.poetry]
name = "PythonFastApiProjectByMe"
version = "0.1.0"
description = ""
authors = ["Pedro Castro <pedro.tiago.castro.ist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"